Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTICSDB.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
	USHORT  msgopt;             //Driver writes message options
	USHORT  msgoptext;          //Non-continuous, Valid, and current burst count (FW)
	USHORT  burstcount;         //Burst count (API)
	USHORT  reserved;           //reserved
	USHORT  msgact;             //Card writes message activity
	USHORT  datacount;          //Number of valid bytes in data[] buffer
	ULONG   listptr;            //Driver writes list buffer pointer
	union {
		ULONG  timetag;         //Card writes time-tag low value (32 bits)
		ULONG  hitcount;        //Card writes hit count
	};
	union {
		ULONG  maxtime;         //Card writes max time
		ULONG  elapsetime;      //Card writes elapsed time
	};
	ULONG   mintime;            //Card writes min time
	ULONG   userptr;            //Driver writes user code pointer
	ULONG   miscptr;            //reserved
	ULONG   timetagh;           //Card writes extended timetag (32 bits)
	USHORT  data[32];           //Card writes data block
} MSGFIELDSCSDB;
typedef MSGFIELDSCSDB * LPMSGFIELDSCSDB;
BTICSDBAPI VOID __stdcall BTICSDB_ListPostRd(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_ListPostWr(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_ListPreRd(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_ListPreWr(LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_MsgActivityRd(MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_MsgActivityWr(USHORT value,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_MsgCheck(MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_MsgCommRd(LPMSGFIELDSCSDB msgfields,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_MsgCommWr(LPMSGFIELDSCSDB msgfields,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_MsgConfig(ULONG configval,INT count,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_MsgCreateEx(ULONG configval,INT count,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_MsgFieldRd(INT fieldtype,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI ULONG __stdcall BTICSDB_MsgFieldWr(ULONG fieldval,INT fieldtype,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI USHORT __stdcall BTICSDB_MsgOptRd(MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI VOID __stdcall BTICSDB_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI MSGADDR __stdcall BTICSDB_MsgReset(MSGADDR msgaddr,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedAgain(SCHNDX index,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedBranchEx(USHORT condition1,USHORT condition2,SCHNDX destindex,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_SchedBuildEx(INT nummsgs,LPMSGADDR msgs,LPINT freq,INT interblockgap,INT rsvdblocks,INT bitrate,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_SchedBuildExx(INT nummsgs,LPMSGADDR msgs,LPINT freq,INT interblockgap,INT rsvdblocks,INT bitrate,LPVOID buf,ULONG bufsize,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedCallEx(USHORT condition1,USHORT condition2,SCHNDX destindex,INT channum,HCORE handleval);
BTICSDBAPI INT __stdcall BTICSDB_SchedGCD(INT a,INT b);
BTICSDBAPI INT __stdcall BTICSDB_SchedLCM(INT a,INT b);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedLogEx(USHORT condition1,USHORT condition2,USHORT tagval,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedNop(INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedPulse0(INT dionum,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedPulse1(INT dionum,INT channum,HCORE handleval);
BTICSDBAPI SCHNDX __stdcall BTICSDB_SchedUser(ULONG useraddr,INT channum,HCORE handleval);
BTICSDBAPI ERRVAL __stdcall BTICSDB_TestProtocol(HCORE handleval);