Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBNET.CS

            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListPostRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ListPostRd(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListPostWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ListPostWr(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListPreRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ListPreRd(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_ListPreWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ListPreWr(UInt32 listaddr, UInt16[] header, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgActivityRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_MsgActivityRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgActivityWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_MsgActivityWr(UInt16 value, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_MsgCheck(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgCommRd(ref MSGFIELDSCSDB msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgCommWr(ref MSGFIELDSCSDB msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgConfig(UInt32 configval, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgCreateEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgCreateEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgFieldRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgFieldRd(Int32 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgFieldWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgFieldWr(UInt32 fieldval, Int32 fieldtype, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_MsgOptRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgReset(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedAgain@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedAgain(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedBranchEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBranchEx(UInt16 condition1, UInt16 condition2, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedBuildEx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBuildEx(Int32 nummsgs, UInt32[] msgs, Int32[] freq, Int32 interblockgap, Int32 rsvdblocks, Int32 bitrate, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedBuildExx@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBuildExx(Int32 nummsgs, UInt32[] msgs, Int32[] freq, Int32 interblockgap, Int32 rsvdblocks, Int32 bitrate, IntPtr buf, UInt32 bufsize, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedCallEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedCallEx(UInt16 condition1, UInt16 condition2, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedGCD@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedGCD(Int32 a, Int32 b);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedLCM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedLCM(Int32 a, Int32 b);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedLogEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedLogEx(UInt16 condition1, UInt16 condition2, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedNop@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedNop(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedPulse0@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedPulse0(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedPulse1@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedPulse1(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_SchedUser@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedUser(UInt32 useraddr, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB.DLL", EntryPoint = "_BTICSDB_TestProtocol@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_TestProtocol(IntPtr handleval);
        }
